fix: resolve the spacing issue

--- a/src/components/LayoutGrid.css
+++ b/src/components/LayoutGrid.css
@@ -7,38 +7,27 @@
   display: flex;
   flex-wrap: wrap;
 }
-.layout-grid__layouts-wrapper {
+.layout-grid__wrapper {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  flex-grow: 1;
+
   background-color: #ccc;
-  background-position: 0 10px;
-  background-image: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 1) 0,
-      rgba(255, 255, 255, 1) 10px,
-      rgba(232, 232, 232, 0) 10px,
-      rgba(232, 232, 232, 0) 170px
-    ),
-    linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 1) 0,
-      rgba(255, 255, 255, 1) 10px,
-      rgba(232, 232, 232, 0) 10px,
-      rgba(232, 232, 232, 0) 170px
-    );
-  background-image: linear-gradient(
-      90deg,
-      rgba(var(--palette-neutral-0, 255, 255, 255), 1) 0,
-      rgba(var(--palette-neutral-0, 255, 255, 255), 1) 10px,
-      rgba(232, 232, 232, 0) 10px,
-      rgba(232, 232, 232, 0) 170px
-    ),
-    linear-gradient(
-      0deg,
-      rgba(var(--palette-neutral-0, 255, 255, 255), 1) 0,
-      rgba(var(--palette-neutral-0, 255, 255, 255), 1) 10px,
-      rgba(232, 232, 232, 0) 10px,
-      rgba(232, 232, 232, 0) 170px
-    );
+}
+.layout-grid__layouts-wrapper {
+  flex-grow: 1;
+  min-height: 100rem !important;
 }
 .react-grid-layout {
   min-height: 8rem;
+}
+
+.react-grid-item {
+  outline: solid 1px rgba(0, 0, 0, 0.08);
+  outline: solid 1px var(--border-subtle-color, rgba(0, 0, 0, 0.08));
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.132);
+  box-shadow: 0 1px 3px 0 var(--callout-shadow-color, rgba(0, 0, 0, 0.132));
+  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--background-color, rgba(255, 255, 255, 1));
 }
